--- a/css/opendata.css
+++ b/css/opendata.css
@@ -66,12 +66,12 @@
 .opendata-filter-item-current.default {color:#808080}
 .opendata-filter-item.open .opendata-filter-item-current {border-radius:1px 1px 0 0}
 .opendata-filter-item-current::after {content:""; display:block; width:16px; height:9px; background:url(../images/opendata-select.svg) no-repeat; position:absolute; right:11px; top:19px}
-.opendata-filter-item-list {display:none; position:absolute; left:0; top:100%; margin-top:-1px; right:0; border:1px solid #d9d9d9; background:#fff; font-size:16px; line-height:24px; border-radius:0 0 1px 1px; max-height:250px; overflow:auto}
+.opendata-filter-item-list {display:none; position:absolute; left:0; top:100%; margin-top:-1px; width:450px; border:1px solid #d9d9d9; background:#fff; font-size:16px; line-height:24px; border-radius:0 0 1px 1px; max-height:250px; overflow:auto; box-sizing:border-box}
 .opendata-filter-item.open .opendata-filter-item-list {display:block}
 .opendata-filter-item-list label {display:block; cursor:pointer; border-top:1px solid #d9d9d9; margin:0}
 .opendata-filter-item-list label:first-child {border-top:none}
 .opendata-filter-item-list label input {display:none}
-.opendata-filter-item-list label span {display:block; padding:11px 13px; color:#808080; transition:all 0.2s; position:relative}
+.opendata-filter-item-list label span {display:block; padding:11px 40px 11px 13px; color:#808080; transition:all 0.2s; position:relative}
 .opendata-filter-item-list label span:hover {background:#f5f5f5}
 .opendata-filter-item-list label input:checked+span {color:#000; background:#fdeeed}
 .opendata-filter-item-list label input:checked+span::after {content:""; display:block; width:20px; height:20px; position:absolute; right:10px; top:14px; background:url(../images/opendata-select-active.svg) no-repeat}
@@ -82,20 +82,22 @@
     .opendata-filter-item:first-child {margin:0}
     .opendata-filter-item-current {height:70px; padding:0 36px 0 19px; font-size:20px; line-height:68px}
     .opendata-filter-item-current::after {width:23px; height:14px; background-size:100%; right:20px; top:28px}
-    .opendata-filter-item-list {font-size:20px; line-height:30px; max-height:300px}
+    .opendata-filter-item-list {font-size:20px; line-height:30px; max-height:300px; width:100%}
     .opendata-filter-item-list label span {padding:19px 54px 19px 19px}
     .opendata-filter-item-list label input:checked+span::after {width:24px; height:24px; background-size:100%; right:15px; top:22px}
 }
 
-.opendata-table:first-child {margin-top:36px}
+.opendata-results:first-child {margin-top:36px}
+.opendata-results.loading {position:relative}
+.opendata-results.loading::after {content:""; display:block; position:absolute; left:0; top:0; right:0; bottom:0; background:rgba(255, 255, 255, 0.5) url(../images/opendata-loading.gif) no-repeat center}
 .opendata-table table {width:100%; border-collapse:collapse; margin:0; border-bottom:2px solid #c8c8c8}
 .opendata-table th {border-bottom:2px solid #c8c8c8; font-weight:normal; font-size:16px; line-height:24px; color:#8a8a8a; text-align:left; vertical-align:top; padding:0 30px 19px 30px; width:25%}
 .opendata-table td {font-weight:normal; font-size:16px; line-height:24px; color:#000; text-align:left; vertical-align:top; padding:24px 30px}
 .opendata-table tbody tr:nth-child(even) td {background:rgba(165, 165, 165, 0.1)}
 
 @media screen and (max-width:1024px) {
+    .opendata-results:first-child {margin-top:0}
     .opendata-table {position:relative; overflow:auto; margin:0 -20px; padding:0 0 0 20px}
-    .opendata-table:first-child {margin-top:0}
     .opendata-table table {width:768px; border-bottom:none}
     .opendata-table th {font-size:20px; line-height:30px; padding:0 20px 14px 20px; border-bottom-color:#525252; white-space:nowrap}
     .opendata-table td {font-size:20px; line-height:30px; padding:11px 20px 14px 20px}
